some new pages, only home page is not finished yet

--- a/src/main/resources/static/css/Home.css
+++ b/src/main/resources/static/css/Home.css
@@ -3,15 +3,44 @@
     padding: 0
 }
 
-#top {
-    background: #7D954D;
-    color: white;
-    font-size: 16px;
-    padding: 16px;
-    height: 10%;
+body {
+    background: url('../../static/images/background.png');
 }
 
-#topname {
-    font-size: 100%;
+.topli {
+    display: inline;
+    float: left;
+    border-right: 1px solid #bbb;
+}
+
+.topa {
+    display: block;
+    width: 60px;
+}
+
+.top {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #7D954D;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.topli a {
+    display: block;
+    color: white;
     text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topli a:hover {
+    background-color: #94aa64;
+}
+
+.topli:last-child {
+    border-right: none;
 }
