--- a/src/main/resources/static/css/Profile.css
+++ b/src/main/resources/static/css/Profile.css
@@ -3,7 +3,7 @@
     padding: 0
 }
 
-body{
+body {
     background: url('../../static/images/background.png');
 }
 
@@ -219,4 +219,8 @@ ul li input[type*="button"]:active {
     inset 0px -1px 1px rgba(255, 255, 255, 0.7);
     text-shadow: 0px 1px 0px rgba(000, 000, 000, 0.3),
     0px 0px 0px rgba(255, 255, 255, 0);
+}
+
+.newtext {
+    color: #7D954D;
 }
