--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" type="text/css" href="../static/css/Home.css">
 </head>
 <body>
-<div id="top">
-    <div id="topname">Web Note</div>
-</div>
+<ul class="top">
+    <li class="topli"><a class="topa" href="Profile.html">Profile</a></li>
+    <li class="topli"><a class="topa" href="">Log out</a></li>
+    <li class="topli"><a class="topa" href="">About us</a></li>
+</ul>
 </body>
 </html>
