--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="../static/css/Register.css">
 </head>
 <body>
-<div id="top">
-    <div id="topname">Web Note</div>
-</div>
+<ul class="top">
+    <li class="topli"><a class="topa" href="Login.html">Log in</a></li>
+    <li class="topli"><a class="topa" href="">About us</a></li>
+</ul>
 <div class="wrapper">
     <div class="header">
     </div>
